// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTokensWithFiltering should fetch bridge tokens if cached tokens are not defined 1`] = `
[
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "0.00184",
    "chainId": "0x1",
    "decimals": 6,
    "image": "images/contract/uni.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "0.00184",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": 0.004232,
    "type": "TOKEN",
  },
  {
    "address": "",
    "balance": "0.000000000000000014",
    "chainId": "0xe708",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.000000000000000014",
    "symbol": "ETH",
    "tokenFiatAmount": 3.53395e-14,
    "type": "NATIVE",
  },
  {
    "address": "",
    "balance": "0.00000000000000001",
    "chainId": "0x1",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.00000000000000001",
    "symbol": "ETH",
    "tokenFiatAmount": 2.5242500000000003e-14,
    "type": "NATIVE",
  },
  {
    "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
    "balance": "1",
    "chainId": "0x1",
    "decimals": undefined,
    "image": "images/contract/chainlink.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "1",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": null,
    "type": "TOKEN",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "0",
    "chainId": "0xe708",
    "decimals": undefined,
    "image": "images/contract/uni.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "0",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": null,
    "type": "TOKEN",
  },
  {
    "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "erc721": false,
    "iconUrl": "images/contract/sushi.svg",
    "image": "images/contract/sushi.svg",
    "name": "SushiSwap",
    "string": undefined,
    "symbol": "SUSHI",
    "type": "TOKEN",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/uni.svg",
    "image": "images/contract/uni.svg",
    "name": "Uniswap",
    "string": undefined,
    "symbol": "UNI",
    "type": "TOKEN",
  },
  {
    "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0xdac17f958d2ee523a2206206994597c13d831ec7",
    "balance": "",
    "chainId": "0x1",
    "decimals": 6,
    "erc20": true,
    "iconUrl": "images/contract/usdt.svg",
    "image": "images/contract/usdt.svg",
    "name": "Tether USD",
    "string": undefined,
    "symbol": "USDT",
    "type": "TOKEN",
  },
  {
    "address": "",
    "assetId": "eip155:1/slip44:60",
    "balance": "0",
    "chainId": "0x1",
    "decimals": 18,
    "iconUrl": "",
    "image": "./images/eth_logo.svg",
    "name": "Ether",
    "string": "0",
    "symbol": "ETH",
    "type": "NATIVE",
  },
  {
    "address": "0x12652c6d93fdb6f4f37d48a8687783c782bb0d10",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0x12652c6d93fdb6f4f37d48a8687783c782bb0d10",
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/NGL.svg",
    "image": "images/contract/NGL.svg",
    "name": "Entangle",
    "string": undefined,
    "symbol": "NGL",
    "type": "TOKEN",
  },
]
`;

exports[`useTokensWithFiltering should fetch bridge tokens if chain is solana 1`] = `
[
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "0.00184",
    "chainId": "0x1",
    "decimals": 6,
    "image": "images/contract/uni.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "0.00184",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": 0.004232,
    "type": "TOKEN",
  },
  {
    "address": "",
    "balance": "0.000000000000000014",
    "chainId": "0xe708",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.000000000000000014",
    "symbol": "ETH",
    "tokenFiatAmount": 3.53395e-14,
    "type": "NATIVE",
  },
  {
    "address": "",
    "balance": "0.00000000000000001",
    "chainId": "0x1",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.00000000000000001",
    "symbol": "ETH",
    "tokenFiatAmount": 2.5242500000000003e-14,
    "type": "NATIVE",
  },
  {
    "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
    "balance": "1",
    "chainId": "0x1",
    "decimals": undefined,
    "image": "images/contract/chainlink.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "1",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": null,
    "type": "TOKEN",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "0",
    "chainId": "0xe708",
    "decimals": undefined,
    "image": "images/contract/uni.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "0",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": null,
    "type": "TOKEN",
  },
  {
    "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "balance": "",
    "chainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
    "decimals": 18,
    "erc20": true,
    "erc721": false,
    "iconUrl": "images/contract/sushi.svg",
    "image": "images/contract/sushi.svg",
    "name": "SushiSwap",
    "string": undefined,
    "symbol": "SUSHI",
    "type": "TOKEN",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "aggregators": [],
    "assetId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "",
    "chainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/uni.svg",
    "image": "images/contract/uni.svg",
    "name": "Uniswap",
    "string": undefined,
    "symbol": "UNI",
    "type": "TOKEN",
  },
  {
    "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
    "aggregators": [],
    "assetId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:0xdac17f958d2ee523a2206206994597c13d831ec7",
    "balance": "",
    "chainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
    "decimals": 6,
    "erc20": true,
    "iconUrl": "images/contract/usdt.svg",
    "image": "images/contract/usdt.svg",
    "name": "Tether USD",
    "string": undefined,
    "symbol": "USDT",
    "type": "TOKEN",
  },
  {
    "address": "",
    "assetId": "eip155:1/slip44:60",
    "balance": "0",
    "chainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
    "decimals": 18,
    "iconUrl": "",
    "image": "./images/solana-logo.svg",
    "name": "Ether",
    "string": "0",
    "symbol": "ETH",
    "type": "NATIVE",
  },
  {
    "address": "0x12652c6d93fdb6f4f37d48a8687783c782bb0d10",
    "aggregators": [],
    "assetId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:0x12652c6d93fdb6f4f37d48a8687783c782bb0d10",
    "balance": "",
    "chainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/NGL.svg",
    "image": "images/contract/NGL.svg",
    "name": "Entangle",
    "string": undefined,
    "symbol": "NGL",
    "type": "TOKEN",
  },
]
`;

exports[`useTokensWithFiltering should return all tokens when chainId !== activeChainId and chainId has been imported, sorted by balance 1`] = `
[
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "0.00184",
    "chainId": "0x1",
    "decimals": 6,
    "image": "images/contract/uni.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "0.00184",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": 0.004232,
    "type": "TOKEN",
  },
  {
    "address": "",
    "balance": "0.000000000000000014",
    "chainId": "0xe708",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.000000000000000014",
    "symbol": "ETH",
    "tokenFiatAmount": 3.53395e-14,
    "type": "NATIVE",
  },
  {
    "address": "",
    "balance": "0.00000000000000001",
    "chainId": "0x1",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.00000000000000001",
    "symbol": "ETH",
    "tokenFiatAmount": 2.5242500000000003e-14,
    "type": "NATIVE",
  },
  {
    "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
    "balance": "1",
    "chainId": "0x1",
    "decimals": undefined,
    "image": "images/contract/chainlink.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "1",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": null,
    "type": "TOKEN",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "0",
    "chainId": "0xe708",
    "decimals": undefined,
    "image": "images/contract/uni.svg",
    "isNative": false,
    "primary": "",
    "secondary": 0,
    "string": "0",
    "symbol": undefined,
    "title": undefined,
    "tokenFiatAmount": null,
    "type": "TOKEN",
  },
  {
    "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "erc721": false,
    "iconUrl": "images/contract/sushi.svg",
    "image": "images/contract/sushi.svg",
    "name": "SushiSwap",
    "string": undefined,
    "symbol": "SUSHI",
    "type": "TOKEN",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/uni.svg",
    "image": "images/contract/uni.svg",
    "name": "Uniswap",
    "string": undefined,
    "symbol": "UNI",
    "type": "TOKEN",
  },
  {
    "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0xdac17f958d2ee523a2206206994597c13d831ec7",
    "balance": "",
    "chainId": "0x1",
    "decimals": 6,
    "erc20": true,
    "iconUrl": "images/contract/usdt.svg",
    "image": "images/contract/usdt.svg",
    "name": "Tether USD",
    "string": undefined,
    "symbol": "USDT",
    "type": "TOKEN",
  },
  {
    "address": "",
    "assetId": "eip155:1/slip44:60",
    "balance": "0",
    "chainId": "0x1",
    "decimals": 18,
    "iconUrl": "",
    "image": "./images/eth_logo.svg",
    "name": "Ether",
    "string": "0",
    "symbol": "ETH",
    "type": "NATIVE",
  },
  {
    "address": "0x12652c6d93fdb6f4f37d48a8687783c782bb0d10",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0x12652c6d93fdb6f4f37d48a8687783c782bb0d10",
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/NGL.svg",
    "image": "images/contract/NGL.svg",
    "name": "Entangle",
    "string": undefined,
    "symbol": "NGL",
    "type": "TOKEN",
  },
]
`;

exports[`useTokensWithFiltering should return all tokens when chainId !== activeChainId and chainId has not been imported, sorted by balance 1`] = `
[
  {
    "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "aggregators": [],
    "assetId": "eip155:1/erc20:0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "balance": "",
    "chainId": "0x89",
    "decimals": 18,
    "erc20": true,
    "erc721": false,
    "iconUrl": "images/contract/sushi.svg",
    "image": "images/contract/sushi.svg",
    "name": "SushiSwap",
    "string": undefined,
    "symbol": "SUSHI",
    "type": "TOKEN",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "aggregators": [],
    "assetId": "eip155:137/erc20:0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "",
    "chainId": "0x89",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/uni.svg",
    "image": "images/contract/uni.svg",
    "name": "Uniswap",
    "string": undefined,
    "symbol": "UNI",
    "type": "TOKEN",
  },
  {
    "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
    "aggregators": [],
    "assetId": "eip155:137/erc20:0xdac17f958d2ee523a2206206994597c13d831ec7",
    "balance": "",
    "chainId": "0x89",
    "decimals": 6,
    "erc20": true,
    "iconUrl": "images/contract/usdt.svg",
    "image": "images/contract/usdt.svg",
    "name": "Tether USD",
    "string": undefined,
    "symbol": "USDT",
    "type": "TOKEN",
  },
  {
    "address": "",
    "assetId": "eip155:1/slip44:60",
    "balance": "0",
    "chainId": "0x89",
    "decimals": 18,
    "iconUrl": "",
    "image": "./images/pol-token.svg",
    "name": "Ether",
    "string": "0",
    "symbol": "ETH",
    "type": "NATIVE",
  },
  {
    "address": "0x12652c6d93fdb6f4f37d48a8687783c782bb0d10",
    "aggregators": [],
    "assetId": "eip155:137/erc20:0x12652c6d93fdb6f4f37d48a8687783c782bb0d10",
    "balance": "",
    "chainId": "0x89",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/NGL.svg",
    "image": "images/contract/NGL.svg",
    "name": "Entangle",
    "string": undefined,
    "symbol": "NGL",
    "type": "TOKEN",
  },
  {
    "address": "0xb50721bcf8d664c30412cfbc6cf7a15145234ad1",
    "aggregators": [],
    "assetId": "eip155:137/erc20:0xb50721bcf8d664c30412cfbc6cf7a15145234ad1",
    "balance": "",
    "chainId": "0x89",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/Arb.svg",
    "image": "images/contract/Arb.svg",
    "name": "Arbitrum",
    "string": undefined,
    "symbol": "ARB",
    "type": "TOKEN",
  },
  {
    "address": "0x4d0528598f916fd1d8dc80e5f54a8feedcfd4b18",
    "aggregators": [],
    "assetId": "eip155:137/erc20:0x4d0528598f916fd1d8dc80e5f54a8feedcfd4b18",
    "balance": "",
    "chainId": "0x89",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/ATOS.svg",
    "image": "images/contract/ATOS.svg",
    "name": "Atoshi",
    "string": undefined,
    "symbol": "ATOS",
    "type": "TOKEN",
  },
  {
    "address": "0x57b946008913b82e4df85f501cbaed910e58d26c",
    "aggregators": [],
    "assetId": "eip155:137/erc20:0x57b946008913b82e4df85f501cbaed910e58d26c",
    "balance": "",
    "chainId": "0x89",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/POND.svg",
    "image": "images/contract/POND.svg",
    "name": "POND",
    "string": undefined,
    "symbol": "POND",
    "type": "TOKEN",
  },
  {
    "address": "0x5eed99d066a8caf10f3e4327c1b3d8b673485eed",
    "aggregators": [],
    "assetId": "eip155:137/erc20:0x5eed99d066a8caf10f3e4327c1b3d8b673485eed",
    "balance": "",
    "chainId": "0x89",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/SEED.svg",
    "image": "images/contract/SEED.svg",
    "name": "SEED",
    "string": undefined,
    "symbol": "SEED",
    "type": "TOKEN",
  },
  {
    "address": "0x487d62468282bd04ddf976631c23128a425555ee",
    "aggregators": [],
    "assetId": "eip155:137/erc20:0x487d62468282bd04ddf976631c23128a425555ee",
    "balance": "",
    "chainId": "0x89",
    "decimals": 5,
    "erc20": true,
    "iconUrl": "images/contract/UPC.svg",
    "image": "images/contract/UPC.svg",
    "name": "UPCX",
    "string": undefined,
    "symbol": "UPC",
    "type": "TOKEN",
  },
]
`;
